--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,13 +7,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <!-- Bootstrap -->
+    <!-- Google Fonts -->
     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+    />
+    <!-- Bootstrap -->
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
       integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA"
       crossorigin="anonymous"
-    />
+    /> -->
     <!-- Fontawesome -->
     <link
       rel="stylesheet"
